Fix dimensions, labels normalization for binary lmdbs
Fixed dimensions in 3D arrays, now all are in the following order: (channels, height, width).
Added option 'normalize_labels' to create binary lmdbs with strict 0-1 class labels.

--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -15,10 +15,37 @@
    },
    "outputs": [],
    "source": [
-    "label_code = {\n",
-    "    'AD': 2,\n",
+    "label_code_ternary = {\n",
+    "    'NC': 0,\n",
     "    'MCI': 1,\n",
-    "    'NC': 0\n",
+    "    'AD': 2\n",
+    "}\n",
+    "\n",
+    "label_code_binary = {\n",
+    "    'AD-MCI': {\n",
+    "        'MCI': 0,\n",
+    "        'AD': 1\n",
+    "    },\n",
+    "    'MCI-AD': {\n",
+    "        'MCI': 0,\n",
+    "        'AD': 1\n",
+    "    },\n",
+    "    'MCI-NC': {\n",
+    "        'NC': 0,\n",
+    "        'MCI': 1\n",
+    "    },\n",
+    "    'NC-MCI': {\n",
+    "        'NC': 0,\n",
+    "        'MCI': 1\n",
+    "    },\n",
+    "    'AD-NC': {\n",
+    "        'NC': 0,\n",
+    "        'AD': 1\n",
+    "    },\n",
+    "    'NC-AD': {\n",
+    "        'NC': 0,\n",
+    "        'AD': 1\n",
+    "    }\n",
     "}\n",
     "\n",
     "caffe_folder = '/home/xubiker/dev/caffe_modified/'"
@@ -129,7 +156,7 @@
     "def write_to_transaction(txn, data, label, key):\n",
     "    import caffe\n",
     "    datum = caffe.proto.caffe_pb2.Datum()\n",
-    "    (datum.width, datum.height, datum.channels) = data.shape\n",
+    "    (datum.channels, datum.height, datum.width) = data.shape\n",
     "    datum.data = data.tobytes()\n",
     "    datum.label = label\n",
     "    key = '{:08}'.format(key)\n",
@@ -179,7 +206,7 @@
     "        for key, value in cursor:\n",
     "            i += 1\n",
     "            datum.ParseFromString(value)\n",
-    "            print('inst %d of size (%d, %d, %d) labeled %d' % (i, datum.width, datum.height, datum.channels, datum.label))"
+    "            print('inst %d of size (%d, %d, %d) labeled %d' % (i, datum.channels, datum.height, datum.width, datum.label))"
    ]
   },
   {
@@ -229,7 +256,7 @@
     "        value = cursor.value();\n",
     "        datum.ParseFromString(value)\n",
     "        flat_x = np.fromstring(datum.data, dtype=data_type)\n",
-    "        x = flat_x.reshape(datum.width, datum.height, datum.channels)\n",
+    "        x = flat_x.reshape(datum.channels, datum.height, datum.width)\n",
     "        debug_plot_median_slices(x, print_slices)"
    ]
   },
@@ -499,7 +526,7 @@
    },
    "outputs": [],
    "source": [
-    "def make_lmdb(one_modality_list, adni_root, data_type, lmdb_name, max_augm_shift, crop_params=None, crop_roi_params=None):\n",
+    "def make_lmdb(one_modality_list, adni_root, data_type, lmdb_name, label_code, max_augm_shift, crop_params=None, crop_roi_params=None):\n",
     "    env = initiate_lmdb(lmdb_name, drop_existing = True)\n",
     "    key = 0\n",
     "    with env.begin(write=True) as txn:\n",
@@ -519,9 +546,7 @@
    "outputs": [],
    "source": [
     "def split_lists_to_binary_groups(lists):\n",
-    "    if len(label_code) != 3:\n",
-    "        raise NameError('unsupported input')\n",
-    "    lbls = list(label_code.keys())\n",
+    "    lbls = list(label_code_ternary.keys())\n",
     "    bin_labels = {'01': lbls[0]+'-'+lbls[1], '12': lbls[1]+'-'+lbls[2], '02': lbls[0]+'-'+lbls[2]}\n",
     "    bin_groups = {'01': [], '12': [], '02': []}\n",
     "    for item in lists:\n",
@@ -675,11 +700,13 @@
    },
    "outputs": [],
    "source": [
-    "def generate_lmdb(lst, lmdb_name):\n",
+    "def generate_lmdb(lst, lmdb_name, label_code):\n",
     "    make_lmdb(one_modality_list=lst, adni_root=params['adni_root'], data_type=params['dtype'],\n",
     "              lmdb_name=lmdb_name,\n",
+    "              label_code=label_code,\n",
     "              max_augm_shift=params['max_augm']['shift'],\n",
-    "              crop_params=params['crop_params'], crop_roi_params=params['crop_roi_params'])\n",
+    "              crop_params=params['crop_params'], crop_roi_params=params['crop_roi_params']\n",
+    "             )\n",
     "    debug_lmdb_print_info(lmdb_name)\n",
     "    debug_lmdb_plot_slices(lmdb_name, data_type=params['dtype'])\n",
     "    mean = calc_lmdb_mean(lmdb_path=lmdb_name, data_type=params['dtype'], reshape_4D=True, plot_mean=True)\n",
@@ -694,7 +721,7 @@
    },
    "outputs": [],
    "source": [
-    "def generate_lmdb_from_lists(lists_file_path, create_binary_lmdbs=False):\n",
+    "def generate_lmdb_from_lists(lists_file_path, create_binary_lmdbs=False, normalize_labels=False):\n",
     "    \n",
     "    import pickle\n",
     "    with open(lists_file_path, 'rb') as f:\n",
@@ -712,14 +739,15 @@
     "#         ['alz_MRI_test'])\n",
     "\n",
     "    for (lst, name) in lists_with_names:\n",
-    "        queue = [(list, name)]\n",
+    "        queue = [(lst, name, label_code_ternary)]\n",
     "        if create_binary_lmdbs:\n",
     "            queue = []\n",
     "            bin_groups = split_lists_to_binary_groups(lst)\n",
     "            for k in bin_groups:\n",
-    "                queue.append((bin_groups[k], name + '_' + k))\n",
-    "        for (l, n) in queue:\n",
-    "            generate_lmdb(l, n)"
+    "                label_code = label_code_binary[k] if normalize_labels else label_code_ternary\n",
+    "                queue.append((bin_groups[k], name + '_' + k, label_code))\n",
+    "        for (l, n, c) in queue:\n",
+    "            generate_lmdb(l, n, c)"
    ]
   },
   {
@@ -732,7 +760,7 @@
    "source": [
     "save_params('params.pkl')\n",
     "generate_lists('lists.pkl', debug=True)\n",
-    "generate_lmdb_from_lists('lists.pkl', create_binary_lmdbs=True)"
+    "generate_lmdb_from_lists('lists.pkl', create_binary_lmdbs=True, normalize_labels=True)"
    ]
   }
  ],
