--- a/generate_sample_sets.ipynb
+++ b/generate_sample_sets.ipynb
@@ -11,51 +11,40 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def generate_augm_params(max_augm_params):\n",
-    "    import numpy.random as rnd\n",
-    "    max_shift = max_augm_params['shift']\n",
-    "    max_blur = max_augm_params['blur']\n",
-    "    while True:\n",
-    "        shift_x = rnd.randint(-max_shift, max_shift)\n",
-    "        shift_y = rnd.randint(-max_shift, max_shift)\n",
-    "        shift_z = rnd.randint(-max_shift, max_shift)\n",
-    "        blur_sigma = float(rnd.randint(1000)) / 1000 * max_blur\n",
-    "        if shift_x + shift_y + shift_z + blur_sigma > 0:\n",
-    "            return (shift_x, shift_y, shift_z, blur_sigma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def generate_augm_lists(dirs_with_labels, new_size, max_augm_params, default_augm_params=None):\n",
+    "def generate_augm_set(dirs_with_labels, new_size, max_augm_params):\n",
     "    import numpy.random as rnd\n",
     "    import math\n",
+    "    from augmentation import AugmParams\n",
+    "    from xsets import XSet, XSetItem\n",
+    "    \n",
+    "    xset = XSet()\n",
+    "    \n",
     "    if new_size == None or len(dirs_with_labels) == new_size:\n",
-    "        return [dwl + [default_augm_params] for dwl in dirs_with_labels]\n",
+    "        for d in dirs_with_labels:\n",
+    "            xset.add(XSetItem(label=d[0], image_dirs=(d[1], d[2]), augm_params=AugmParams()))\n",
+    "        return xset\n",
+    "    \n",
     "    augm_coeff = int(math.floor(new_size / len(dirs_with_labels)))\n",
-    "    res = []\n",
+    "\n",
     "    i = 0\n",
-    "    for dwl in dirs_with_labels:\n",
-    "        res.append(dwl + [(0, 0, 0, 0.0)])\n",
+    "    for d in dirs_with_labels:\n",
+    "        xset.add(XSetItem(label=d[0], image_dirs=(d[1], d[2]), augm_params=AugmParams()))\n",
     "        i += 1\n",
     "        for _ in range(augm_coeff-1):\n",
-    "            res.append(dwl + [generate_augm_params(max_augm_params)])\n",
+    "            p = AugmParams.tranc_random(max_augm_params)\n",
+    "            xset.add(XSetItem(label=d[0], image_dirs=(d[1], d[2]), augm_params=p))\n",
     "            i += 1\n",
     "    while i < new_size:\n",
     "        ridx = rnd.randint(len(dirs_with_labels))\n",
-    "        dwl = dirs_with_labels[ridx]\n",
-    "        res.append(dwl +[generate_augm_params(max_augm_params)])\n",
+    "        d = dirs_with_labels[ridx]\n",
+    "        p = AugmParams.tranc_random(max_augm_params)\n",
+    "        xset.add(XSetItem(label=d[0], image_dirs=(d[1], d[2]), augm_params=p))\n",
     "        i += 1\n",
-    "    return res"
+    "    return xset"
    ]
   },
   {
@@ -66,11 +55,12 @@
    },
    "outputs": [],
    "source": [
-    "def generate_lists_from_adni2(adni_root, max_augm_params, augm_factor, valid_prc = 0.25, test_prc = 0.25, shuffle_data=True, debug=True):\n",
+    "def generate_samples_from_adni2(adni_root, max_augm_params, augm_factor, prefix_name='alz', valid_prc = 0.25, test_prc = 0.25, shuffle_data=True, debug=True):\n",
     "    \n",
     "    import os\n",
-    "    import numpy as np\n",
+    "    import augmentation as augm\n",
     "    import numpy.random as rnd\n",
+    "    from xsets import XSet\n",
     "\n",
     "    stage_dirs = {\n",
     "        'AD': '/AD/',\n",
@@ -79,8 +69,6 @@
     "    }\n",
     "\n",
     "    stage_dirs_root = {k: adni_root + v for k, v in stage_dirs.items()}\n",
-    "    \n",
-    "    default_augm = (0, 0, 0, 0.0)\n",
     "    \n",
     "    patients_MRI_train = []\n",
     "    patients_MD_train = []\n",
@@ -106,9 +94,9 @@
     "    print('validation data will be augmented to %d samples by each class' % valid_size_balanced)\n",
     "    print('test data will be augmented to %d samples by each class' % ts)\n",
     "    \n",
-    "    train_lists_out = []\n",
-    "    valid_lists_out = []\n",
-    "    test_lists_out = []\n",
+    "    train_set = XSet(name = prefix_name + '_train')\n",
+    "    valid_set = XSet(name = prefix_name + '_valid')\n",
+    "    test_set = XSet(name = prefix_name + '_test')\n",
     "    \n",
     "    for k in stage_dirs_root:\n",
     "        stage_dir = stage_dirs[k]\n",
@@ -119,29 +107,26 @@
     "        valid_dirs = patient_dirs[test_size[k]:test_size[k]+valid_size[k]]\n",
     "        train_dirs = patient_dirs[test_size[k]+valid_size[k]:]\n",
     "                                 \n",
-    "        train_lists = [[k, stage_dir + d + '/SMRI/', stage_dir + d + '/MD/'] for d in train_dirs]\n",
-    "        valid_lists = [[k, stage_dir + d + '/SMRI/', stage_dir + d + '/MD/'] for d in valid_dirs]\n",
-    "        test_lists = [[k, stage_dir + d + '/SMRI/', stage_dir + d + '/MD/'] for d in test_dirs]\n",
+    "        train_lists = [(k, stage_dir + d + '/SMRI/', stage_dir + d + '/MD/') for d in train_dirs]\n",
+    "        valid_lists = [(k, stage_dir + d + '/SMRI/', stage_dir + d + '/MD/') for d in valid_dirs]\n",
+    "        test_lists = [(k, stage_dir + d + '/SMRI/', stage_dir + d + '/MD/') for d in test_dirs]\n",
     "        \n",
-    "        train_lists_out += generate_augm_lists(train_lists, train_size_balanced, max_augm_params)\n",
-    "        valid_lists_out += generate_augm_lists(valid_lists, valid_size_balanced, max_augm_params)\n",
-    "        test_lists_out += generate_augm_lists(test_lists, None, None, default_augm_params=default_augm)\n",
+    "        train_set.add_all(generate_augm_set(train_lists, train_size_balanced, max_augm_params))\n",
+    "        valid_set.add_all(generate_augm_set(valid_lists, valid_size_balanced, max_augm_params))\n",
+    "        test_set.add_all(generate_augm_set(test_lists, None, None))\n",
     "    \n",
     "    if shuffle_data:\n",
-    "        rnd.shuffle(train_lists_out)\n",
-    "        rnd.shuffle(valid_lists_out)\n",
-    "        rnd.shuffle(test_lists_out)\n",
+    "        train_set.shuffle()\n",
+    "        valid_set.shuffle()\n",
+    "        test_set.shuffle()\n",
     "    \n",
     "    if debug:\n",
-    "        print('### train lists (%d instances):' % len(train_lists_out))\n",
-    "        for i in train_lists_out: print(i)\n",
-    "        print('### valid lists (%d instances):' % len(valid_lists_out))\n",
-    "        for i in valid_lists_out: print(i)\n",
-    "        print('### test lists (%d instances):' % len(test_lists_out))\n",
-    "        for i in test_lists_out: print(i)\n",
+    "        train_set.print()\n",
+    "        valid_set.print()\n",
+    "        test_set.print()\n",
     "        \n",
     "        \n",
-    "    return (train_lists_out, valid_lists_out, test_lists_out)"
+    "    return train_set, valid_set, test_set"
    ]
   },
   {
@@ -167,10 +152,12 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import augmentation as augm\n",
     "\n",
     "lists_params = {\n",
     "    'adni_root': '/home/xubiker/ADNI_Multimodal/dataset/',\n",
-    "    'max_augm': {'shift': 2, 'blur': 1.2},\n",
+    "    'prefix_name': 'alz',\n",
+    "    'max_augm': augm.AugmParams(shift=(2, 2, 2), sigma=1.2),\n",
     "    'test_prc': 0.25,\n",
     "    'valid_prc': 0.25,\n",
     "    'augm_factor': 2\n",
@@ -206,15 +193,16 @@
    },
    "outputs": [],
    "source": [
-    "def generate_lists(lists_file_path, params, debug=True):\n",
+    "def generate_sets(lists_file_path, params, debug=True):\n",
     "    import ex_utils\n",
-    "    train_list, valid_list, test_list = generate_lists_from_adni2(\n",
+    "    train_set, valid_set, test_set = generate_samples_from_adni2(\n",
     "        params['adni_root'],\n",
     "        params['max_augm'], test_prc=params['test_prc'], valid_prc=params['valid_prc'],\n",
     "        augm_factor=params['augm_factor'],\n",
-    "        shuffle_data=True, debug=debug\n",
+    "        prefix_name=params['prefix_name'],\n",
+    "        shuffle_data=False, debug=debug\n",
     "    )\n",
-    "    ex_utils.save_pickle((train_list, valid_list, test_list), lists_file_path)"
+    "    ex_utils.save_pickle((train_set, valid_set, test_set), lists_file_path)"
    ]
   },
   {
@@ -227,7 +215,7 @@
    "source": [
     "import ex_utils\n",
     "ex_utils.save_pickle(lists_params, 'params.pkl')\n",
-    "generate_lists('lists.pkl', lists_params, debug=True)"
+    "generate_sets('sets.pkl', lists_params, debug=True)"
    ]
   }
  ],
