--- a/sets_to_lmdb.ipynb
+++ b/sets_to_lmdb.ipynb
@@ -251,7 +251,7 @@
     "    array = ex_utils.nii_to_array(nii, data_type)\n",
     "    if crop_params != None:\n",
     "        array = ex_utils.crop_border(array, crop_prc=crop_params['prc'], shift_prc=crop_params['shift'])\n",
-    "    augmented = augm.augment(array, max_augm_params, set_item.augm_params)\n",
+    "    augmented = augm.augment(array, set_item.augm_params, max_augm_params)\n",
     "    if crop_roi_params != None:\n",
     "        crp = crop_roi_params # (min_x, max_x, min_y, max_y, min_z, max_z)\n",
     "        augmented = augmented[crp[0]:crp[1], crp[2]:crp[3], crp[4]:crp[5]]\n",
