Added 3D network on TensorFlow

--- a/generate_sample_sets.ipynb
+++ b/generate_sample_sets.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -155,7 +155,8 @@
     "import augmentation as augm\n",
     "\n",
     "lists_params = {\n",
-    "    'adni_root': '/home/xubiker/ADNI_Multimodal/dataset/',\n",
+    "    'adni_root': 'C:/dev/ADNI_Multimodal/dataset/',\n",
+    "    # 'adni_root': '/home/xubiker/ADNI_Multimodal/dataset/',\n",
     "    'prefix_name': 'alz',\n",
     "    'max_augm': augm.AugmParams(shift=(2, 2, 2), sigma=1.2),\n",
     "    'test_prc': 0.25,\n",
