--- a/sets_to_lmdb.ipynb
+++ b/sets_to_lmdb.ipynb
@@ -11,9 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import ex_config\n",
@@ -233,46 +231,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Functions to preprocess data and create lmdb"
+    "# Function to create lmdb"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "def preprocess(set_item, adni_root, data_type, max_augm_params, crop_params=None, crop_roi_params=None):\n",
-    "    import ex_utils\n",
-    "    import augmentation as augm\n",
-    "    nii = ex_utils.get_nii_from_folder(adni_root + set_item.image_dirs[0])[0]\n",
-    "    array = ex_utils.nii_to_array(nii, data_type)\n",
-    "    if crop_params != None:\n",
-    "        array = ex_utils.crop_border(array, crop_prc=crop_params['prc'], shift_prc=crop_params['shift'])\n",
-    "    augmented = augm.augment(array, set_item.augm_params, max_augm_params)\n",
-    "    if crop_roi_params != None:\n",
-    "        crp = crop_roi_params # (min_x, max_x, min_y, max_y, min_z, max_z)\n",
-    "        augmented = augmented[crp[0]:crp[1], crp[2]:crp[3], crp[4]:crp[5]]\n",
-    "    return augmented"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def xset_to_lmdb(xset, adni_root, data_type, label_family, max_augm_params, crop_params=None, crop_roi_params=None):\n",
     "    import ex_config\n",
+    "    import preprocessing as pp\n",
     "    env = initiate_lmdb(xset.name, drop_existing = True)\n",
     "    key = 0\n",
     "    with env.begin(write=True) as txn:\n",
     "        for i in xset.items:\n",
-    "            augm = preprocess(i, adni_root, data_type, max_augm_params, crop_params, crop_roi_params)\n",
+    "            augm = pp.full_preprocess(i, adni_root, data_type, max_augm_params, crop_params, crop_roi_params)\n",
     "            print('%d. writing image of shape %s to lmdb (%s)' % (key, str(augm.shape), i.image_dirs[0]))\n",
     "            write_to_transaction(txn, augm, ex_config.get_label_code(label_family, i.label), key)\n",
     "            key += 1"
@@ -295,9 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -323,9 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def generate_lmdb_from_sets(sets_path, params, create_binary_lmdbs=False, normalize_labels=False):\n",
@@ -362,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "generate_lmdb_from_sets('sets.pkl', lmdb_params, create_binary_lmdbs=True, normalize_labels=True)"
@@ -373,7 +342,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
