--- a/generate_sample_sets.ipynb
+++ b/generate_sample_sets.ipynb
@@ -35,13 +35,13 @@
     "        xset.add(XSetItem(label=d[0], image_dirs=(d[1], d[2]), augm_params=AugmParams()))\n",
     "        i += 1\n",
     "        for _ in range(augm_coeff-1):\n",
-    "            p = AugmParams.tranc_random(max_augm_params)\n",
+    "            p = AugmParams.trunc_random(max_augm_params)\n",
     "            xset.add(XSetItem(label=d[0], image_dirs=(d[1], d[2]), augm_params=p))\n",
     "            i += 1\n",
     "    while i < new_size:\n",
     "        ridx = rnd.randint(len(dirs_with_labels))\n",
     "        d = dirs_with_labels[ridx]\n",
-    "        p = AugmParams.tranc_random(max_augm_params)\n",
+    "        p = AugmParams.trunc_random(max_augm_params)\n",
     "        xset.add(XSetItem(label=d[0], image_dirs=(d[1], d[2]), augm_params=p))\n",
     "        i += 1\n",
     "    return xset"
