Modifications in preprocessing part

--- a/sets_to_lmdb.ipynb
+++ b/sets_to_lmdb.ipynb
@@ -208,7 +208,7 @@
     "    with env.begin() as txn:\n",
     "        datum = caffe.proto.caffe_pb2.Datum()\n",
     "        cursor = txn.cursor()\n",
-    "        cursor.next();\n",
+    "        cursor.next()\n",
     "        datum.ParseFromString(cursor.value())\n",
     "        mean = np.zeros([datum.channels, datum.height, datum.width])\n",
     "        cursor = txn.cursor()\n",
